<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="saldo_disponivel">Saldo Disponivel</string>
    <string name="saldo_limite">Saldo + Limite</string>
    <string name="ver_extrato">Ver extrato</string>
    <string name="txt_pagar">Pagar</string>
    <string name="tv_transferir">Transferir</string>
    <string name="tv_recarga">Recarga</string>
    <string name="cartao_final">Cartão final</string>
    <string name="cd_logo_santander" translatable="false">Logo Santander</string>
</resources>